# tracing-minimal-reproduction

./: Cargo.toml  README.md
src/: main.rs
